welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: Missing closing brace `}' assumed here
def faireCarre (c:Color) {
^PatternPicture:10: error: expected class or object definition
def faireMotif() { 
^PatternPicture:17: error: expected start of definition
override def run() { 
         ^