welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def faireCarre (c:Color) {
	setCouleurBrosse(c)
	avance(); baisseBrosse(); leveBrosse()
	gauche(); avance(); gauche(); 
	avance(); baisseBrosse(); leveBrosse()
	gauche(); avance(); gauche(); avance(); avance(); avance(); gauche()
}

def faireMotif() { 
	faireCarre(Color.red)
	faireCarre(Color.blue)
	faireCarre(Color.green)
	faireCarre(Color.yellow)
		}

override def run() { 
	for (y <- 1 to 2) {
		faireMotif()
	}

